# go/gen/exchange/endpoints.go
@@ -1,0 +1,52 @@
+// Code generated by goa v3.23.4, DO NOT EDIT.
+//
+// exchange endpoints
+//
+// Command:
+// $ goa gen github.com/reidlai/ta-workspace/modules/watchlist/go/design
+
+package exchange
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "exchange" service endpoints.
+type Endpoints struct {
+	List goa.Endpoint
+	Get  goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "exchange" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		List: NewListEndpoint(s),
+		Get:  NewGetEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "exchange" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.List = m(e.List)
+	e.Get = m(e.Get)
+}
+
+// NewListEndpoint returns an endpoint function that calls the method "list" of
+// service "exchange".
+func NewListEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*ListPayload)
+		return s.List(ctx, p)
+	}
+}
+
+// NewGetEndpoint returns an endpoint function that calls the method "get" of
+// service "exchange".
+func NewGetEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*GetPayload)
+		return s.Get(ctx, p)
+	}
+}
