# go/gen/http/exchange/server/encode_decode.go
@@ -1,0 +1,119 @@
+// Code generated by goa v3.23.4, DO NOT EDIT.
+//
+// exchange HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen github.com/reidlai/ta-workspace/modules/watchlist/go/design
+
+package server
+
+import (
+	"context"
+	"errors"
+	"net/http"
+
+	exchange "github.com/reidlai/ta-workspace/modules/watchlist/go/gen/exchange"
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeListResponse returns an encoder for responses returned by the exchange
+// list endpoint.
+func EncodeListResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.([]*exchange.Exchange)
+		enc := encoder(ctx, w)
+		body := NewListResponseBody(res)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeListRequest returns a decoder for requests sent to the exchange list
+// endpoint.
+func DecodeListRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exchange.ListPayload, error) {
+	return func(r *http.Request) (*exchange.ListPayload, error) {
+		var (
+			query *string
+		)
+		queryRaw := r.URL.Query().Get("query")
+		if queryRaw != "" {
+			query = &queryRaw
+		}
+		payload := NewListPayload(query)
+
+		return payload, nil
+	}
+}
+
+// EncodeGetResponse returns an encoder for responses returned by the exchange
+// get endpoint.
+func EncodeGetResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.(*exchange.Exchange)
+		enc := encoder(ctx, w)
+		body := NewGetResponseBody(res)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeGetRequest returns a decoder for requests sent to the exchange get
+// endpoint.
+func DecodeGetRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exchange.GetPayload, error) {
+	return func(r *http.Request) (*exchange.GetPayload, error) {
+		var (
+			operatingMic string
+
+			params = mux.Vars(r)
+		)
+		operatingMic = params["operating_mic"]
+		payload := NewGetPayload(operatingMic)
+
+		return payload, nil
+	}
+}
+
+// EncodeGetError returns an encoder for errors returned by the get exchange
+// endpoint.
+func EncodeGetError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+	encodeError := goahttp.ErrorEncoder(encoder, formatter)
+	return func(ctx context.Context, w http.ResponseWriter, v error) error {
+		var en goa.GoaErrorNamer
+		if !errors.As(v, &en) {
+			return encodeError(ctx, w, v)
+		}
+		switch en.GoaErrorName() {
+		case "not_found":
+			var res *goa.ServiceError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewGetNotFoundResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusNotFound)
+			return enc.Encode(body)
+		default:
+			return encodeError(ctx, w, v)
+		}
+	}
+}
+
+// marshalExchangeExchangeToExchangeResponse builds a value of type
+// *ExchangeResponse from a value of type *exchange.Exchange.
+func marshalExchangeExchangeToExchangeResponse(v *exchange.Exchange) *ExchangeResponse {
+	res := &ExchangeResponse{
+		OperatingMic: v.OperatingMic,
+		ExchangeName: v.ExchangeName,
+		DisplayName:  v.DisplayName,
+		Country:      v.Country,
+		City:         v.City,
+		Acronym:      v.Acronym,
+	}
+
+	return res
+}
