# go/gen/http/exchange/server/paths.go
@@ -1,0 +1,22 @@
+// Code generated by goa v3.23.4, DO NOT EDIT.
+//
+// HTTP request path constructors for the exchange service.
+//
+// Command:
+// $ goa gen github.com/reidlai/ta-workspace/modules/watchlist/go/design
+
+package server
+
+import (
+	"fmt"
+)
+
+// ListExchangePath returns the URL path to the exchange service list HTTP endpoint.
+func ListExchangePath() string {
+	return "/exchanges"
+}
+
+// GetExchangePath returns the URL path to the exchange service get HTTP endpoint.
+func GetExchangePath(operatingMic string) string {
+	return fmt.Sprintf("/exchanges/%v", operatingMic)
+}
