# go/gen/http/exchange/server/types.go
@@ -1,0 +1,126 @@
+// Code generated by goa v3.23.4, DO NOT EDIT.
+//
+// exchange HTTP server types
+//
+// Command:
+// $ goa gen github.com/reidlai/ta-workspace/modules/watchlist/go/design
+
+package server
+
+import (
+	exchange "github.com/reidlai/ta-workspace/modules/watchlist/go/gen/exchange"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// ListResponseBody is the type of the "exchange" service "list" endpoint HTTP
+// response body.
+type ListResponseBody []*ExchangeResponse
+
+// GetResponseBody is the type of the "exchange" service "get" endpoint HTTP
+// response body.
+type GetResponseBody struct {
+	// Operating Market Identifier Code
+	OperatingMic string `form:"operating_mic" json:"operating_mic" xml:"operating_mic"`
+	// Official exchange name
+	ExchangeName string `form:"exchange_name" json:"exchange_name" xml:"exchange_name"`
+	// Formatted display name
+	DisplayName string `form:"display_name" json:"display_name" xml:"display_name"`
+	// ISO country code
+	Country string `form:"country" json:"country" xml:"country"`
+	// City location
+	City string `form:"city" json:"city" xml:"city"`
+	// Exchange acronym
+	Acronym *string `form:"acronym,omitempty" json:"acronym,omitempty" xml:"acronym,omitempty"`
+}
+
+// GetNotFoundResponseBody is the type of the "exchange" service "get" endpoint
+// HTTP response body for the "not_found" error.
+type GetNotFoundResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// ExchangeResponse is used to define fields on response body types.
+type ExchangeResponse struct {
+	// Operating Market Identifier Code
+	OperatingMic string `form:"operating_mic" json:"operating_mic" xml:"operating_mic"`
+	// Official exchange name
+	ExchangeName string `form:"exchange_name" json:"exchange_name" xml:"exchange_name"`
+	// Formatted display name
+	DisplayName string `form:"display_name" json:"display_name" xml:"display_name"`
+	// ISO country code
+	Country string `form:"country" json:"country" xml:"country"`
+	// City location
+	City string `form:"city" json:"city" xml:"city"`
+	// Exchange acronym
+	Acronym *string `form:"acronym,omitempty" json:"acronym,omitempty" xml:"acronym,omitempty"`
+}
+
+// NewListResponseBody builds the HTTP response body from the result of the
+// "list" endpoint of the "exchange" service.
+func NewListResponseBody(res []*exchange.Exchange) ListResponseBody {
+	body := make([]*ExchangeResponse, len(res))
+	for i, val := range res {
+		if val == nil {
+			body[i] = nil
+			continue
+		}
+		body[i] = marshalExchangeExchangeToExchangeResponse(val)
+	}
+	return body
+}
+
+// NewGetResponseBody builds the HTTP response body from the result of the
+// "get" endpoint of the "exchange" service.
+func NewGetResponseBody(res *exchange.Exchange) *GetResponseBody {
+	body := &GetResponseBody{
+		OperatingMic: res.OperatingMic,
+		ExchangeName: res.ExchangeName,
+		DisplayName:  res.DisplayName,
+		Country:      res.Country,
+		City:         res.City,
+		Acronym:      res.Acronym,
+	}
+	return body
+}
+
+// NewGetNotFoundResponseBody builds the HTTP response body from the result of
+// the "get" endpoint of the "exchange" service.
+func NewGetNotFoundResponseBody(res *goa.ServiceError) *GetNotFoundResponseBody {
+	body := &GetNotFoundResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewListPayload builds a exchange service list endpoint payload.
+func NewListPayload(query *string) *exchange.ListPayload {
+	v := &exchange.ListPayload{}
+	v.Query = query
+
+	return v
+}
+
+// NewGetPayload builds a exchange service get endpoint payload.
+func NewGetPayload(operatingMic string) *exchange.GetPayload {
+	v := &exchange.GetPayload{}
+	v.OperatingMic = operatingMic
+
+	return v
+}
