# go/gen/http/openapi3.json
@@ -1,202 +1,1 @@
-{
-  "openapi": "3.0.3",
-  "info": { "title": "Goa API", "version": "0.0.1" },
-  "servers": [
-    {
-      "url": "http://localhost:80",
-      "description": "Default server for watchlist"
-    }
-  ],
-  "paths": {
-    "/watchlist": {
-      "get": {
-        "tags": ["watchlist"],
-        "summary": "list watchlist",
-        "operationId": "watchlist#list",
-        "parameters": [
-          {
-            "name": "X-User-ID",
-            "in": "header",
-            "description": "User ID",
-            "allowEmptyValue": true,
-            "required": true,
-            "schema": {
-              "type": "string",
-              "description": "User ID",
-              "example": "Recusandae veniam enim aut."
-            },
-            "example": "Ullam officiis aut quo molestiae."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK response.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": { "$ref": "#/components/schemas/TickerItem" },
-                  "example": [
-                    {
-                      "created_at": "2023-10-27T10:00:00Z",
-                      "on_hand": true,
-                      "symbol": "AAPL"
-                    },
-                    {
-                      "created_at": "2023-10-27T10:00:00Z",
-                      "on_hand": true,
-                      "symbol": "AAPL"
-                    }
-                  ]
-                },
-                "example": [
-                  {
-                    "created_at": "2023-10-27T10:00:00Z",
-                    "on_hand": true,
-                    "symbol": "AAPL"
-                  },
-                  {
-                    "created_at": "2023-10-27T10:00:00Z",
-                    "on_hand": true,
-                    "symbol": "AAPL"
-                  },
-                  {
-                    "created_at": "2023-10-27T10:00:00Z",
-                    "on_hand": true,
-                    "symbol": "AAPL"
-                  },
-                  {
-                    "created_at": "2023-10-27T10:00:00Z",
-                    "on_hand": true,
-                    "symbol": "AAPL"
-                  }
-                ]
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": ["watchlist"],
-        "summary": "add watchlist",
-        "operationId": "watchlist#add",
-        "parameters": [
-          {
-            "name": "X-User-ID",
-            "in": "header",
-            "description": "User ID",
-            "allowEmptyValue": true,
-            "required": true,
-            "schema": {
-              "type": "string",
-              "description": "User ID",
-              "example": "Fugit consequatur maiores sint dolor."
-            },
-            "example": "Facilis sed eos ut et."
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/AddRequestBody" },
-              "example": {
-                "on_hand": false,
-                "symbol": "Vel ea fugit et ab nobis."
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK response.",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/TickerItem" },
-                "example": {
-                  "created_at": "2023-10-27T10:00:00Z",
-                  "on_hand": true,
-                  "symbol": "AAPL"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/watchlist/{symbol}": {
-      "delete": {
-        "tags": ["watchlist"],
-        "summary": "remove watchlist",
-        "operationId": "watchlist#remove",
-        "parameters": [
-          {
-            "name": "symbol",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "Expedita voluptas vel explicabo aliquam libero."
-            },
-            "example": "Aut dolorum in."
-          },
-          {
-            "name": "X-User-ID",
-            "in": "header",
-            "description": "User ID",
-            "allowEmptyValue": true,
-            "required": true,
-            "schema": {
-              "type": "string",
-              "description": "User ID",
-              "example": "In molestiae."
-            },
-            "example": "Nobis quia consequatur totam et."
-          }
-        ],
-        "responses": { "204": { "description": "No Content response." } }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "AddRequestBody": {
-        "type": "object",
-        "properties": {
-          "on_hand": { "type": "boolean", "example": false },
-          "symbol": { "type": "string", "example": "Nemo magnam sint." }
-        },
-        "example": { "on_hand": false, "symbol": "Consequatur doloribus." },
-        "required": ["symbol", "on_hand"]
-      },
-      "TickerItem": {
-        "type": "object",
-        "properties": {
-          "created_at": {
-            "type": "string",
-            "description": "Creation timestamp",
-            "example": "2023-10-27T10:00:00Z",
-            "format": "date-time"
-          },
-          "on_hand": {
-            "type": "boolean",
-            "description": "Whether user holds the stock",
-            "example": true
-          },
-          "symbol": {
-            "type": "string",
-            "description": "Stock Symbol",
-            "example": "AAPL"
-          }
-        },
-        "example": {
-          "created_at": "2023-10-27T10:00:00Z",
-          "on_hand": true,
-          "symbol": "AAPL"
-        },
-        "required": ["symbol", "on_hand"]
-      }
-    }
-  },
-  "tags": [{ "name": "watchlist", "description": "Manage user watchlist" }]
-}
+{"openapi":"3.0.3","info":{"title":"Goa API","version":"0.0.1"},"servers":[{"url":"http://localhost:80","description":"Default server for exchange"}],"paths":{"/exchanges":{"get":{"tags":["exchange"],"summary":"list exchange","description":"List all active operating exchanges","operationId":"exchange#list","parameters":[{"name":"query","in":"query","description":"Optional search query to filter exchanges","allowEmptyValue":true,"schema":{"type":"string","description":"Optional search query to filter exchanges","example":"Inventore quia vitae aut a."},"example":"Tenetur est quaerat qui et ad."}],"responses":{"200":{"description":"OK response.","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/Exchange"},"example":[{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"},{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"},{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"},{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"}]},"example":[{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"},{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"}]}}}}}},"/exchanges/{operating_mic}":{"get":{"tags":["exchange"],"summary":"get exchange","description":"Get exchange by Operating MIC","operationId":"exchange#get","parameters":[{"name":"operating_mic","in":"path","description":"Operating Market Identifier Code","required":true,"schema":{"type":"string","description":"Operating Market Identifier Code","example":"Laudantium pariatur molestias quisquam dignissimos."},"example":"Tenetur et hic."}],"responses":{"200":{"description":"OK response.","content":{"application/json":{"schema":{"$ref":"#/components/schemas/Exchange"},"example":{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"}}}},"404":{"description":"not_found: Exchange not found","content":{"application/vnd.goa.error":{"schema":{"$ref":"#/components/schemas/Error"}}}}}}},"/watchlist":{"get":{"tags":["watchlist"],"summary":"list watchlist","operationId":"watchlist#list","parameters":[{"name":"X-User-ID","in":"header","description":"User ID","allowEmptyValue":true,"required":true,"schema":{"type":"string","description":"User ID","example":"Accusantium aut voluptates quis nesciunt veniam voluptate."},"example":"Et sed consequatur."}],"responses":{"200":{"description":"OK response.","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/TickerItem"},"example":[{"created_at":"2023-10-27T10:00:00Z","on_hand":true,"symbol":"AAPL"},{"created_at":"2023-10-27T10:00:00Z","on_hand":true,"symbol":"AAPL"}]},"example":[{"created_at":"2023-10-27T10:00:00Z","on_hand":true,"symbol":"AAPL"},{"created_at":"2023-10-27T10:00:00Z","on_hand":true,"symbol":"AAPL"}]}}}}},"post":{"tags":["watchlist"],"summary":"add watchlist","operationId":"watchlist#add","parameters":[{"name":"X-User-ID","in":"header","description":"User ID","allowEmptyValue":true,"required":true,"schema":{"type":"string","description":"User ID","example":"Eveniet quidem vero."},"example":"Quas est voluptatum rerum qui voluptas."}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/AddRequestBody"},"example":{"on_hand":true,"symbol":"Et quod sit."}}}},"responses":{"200":{"description":"OK response.","content":{"application/json":{"schema":{"$ref":"#/components/schemas/TickerItem"},"example":{"created_at":"2023-10-27T10:00:00Z","on_hand":true,"symbol":"AAPL"}}}}}}},"/watchlist/{symbol}":{"delete":{"tags":["watchlist"],"summary":"remove watchlist","operationId":"watchlist#remove","parameters":[{"name":"symbol","in":"path","required":true,"schema":{"type":"string","example":"Cupiditate quas quo."},"example":"Unde laborum dolorem odit numquam aut hic."},{"name":"X-User-ID","in":"header","description":"User ID","allowEmptyValue":true,"required":true,"schema":{"type":"string","description":"User ID","example":"Exercitationem tempore."},"example":"Quo laborum."}],"responses":{"204":{"description":"No Content response."}}}}},"components":{"schemas":{"AddRequestBody":{"type":"object","properties":{"on_hand":{"type":"boolean","example":false},"symbol":{"type":"string","example":"Incidunt et iure qui."}},"example":{"on_hand":false,"symbol":"Laudantium pariatur."},"required":["symbol","on_hand"]},"Error":{"type":"object","properties":{"fault":{"type":"boolean","description":"Is the error a server-side fault?","example":false},"id":{"type":"string","description":"ID is a unique identifier for this particular occurrence of the problem.","example":"123abc"},"message":{"type":"string","description":"Message is a human-readable explanation specific to this occurrence of the problem.","example":"parameter 'p' must be an integer"},"name":{"type":"string","description":"Name is the name of this class of errors.","example":"bad_request"},"temporary":{"type":"boolean","description":"Is the error temporary?","example":true},"timeout":{"type":"boolean","description":"Is the error a timeout?","example":true}},"description":"Exchange not found","example":{"fault":true,"id":"123abc","message":"parameter 'p' must be an integer","name":"bad_request","temporary":true,"timeout":false},"required":["name","id","message","temporary","timeout","fault"]},"Exchange":{"type":"object","properties":{"acronym":{"type":"string","description":"Exchange acronym","example":"NYSE"},"city":{"type":"string","description":"City location","example":"NEW YORK"},"country":{"type":"string","description":"ISO country code","example":"US"},"display_name":{"type":"string","description":"Formatted display name","example":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)"},"exchange_name":{"type":"string","description":"Official exchange name","example":"NEW YORK STOCK EXCHANGE, INC."},"operating_mic":{"type":"string","description":"Operating Market Identifier Code","example":"XNYS"}},"description":"Exchange represents a stock exchange","example":{"acronym":"NYSE","city":"NEW YORK","country":"US","display_name":"NYSE - NEW YORK STOCK EXCHANGE, INC. (US)","exchange_name":"NEW YORK STOCK EXCHANGE, INC.","operating_mic":"XNYS"},"required":["operating_mic","exchange_name","display_name","country","city"]},"TickerItem":{"type":"object","properties":{"created_at":{"type":"string","description":"Creation timestamp","example":"2023-10-27T10:00:00Z","format":"date-time"},"on_hand":{"type":"boolean","description":"Whether user holds the stock","example":true},"symbol":{"type":"string","description":"Stock Symbol","example":"AAPL"}},"example":{"created_at":"2023-10-27T10:00:00Z","on_hand":true,"symbol":"AAPL"},"required":["symbol","on_hand"]}}},"tags":[{"name":"exchange","description":"Exchange service for listing and retrieving stock exchanges"},{"name":"watchlist","description":"Manage user watchlist"}]}
